- [change] restored step attenuator RX1 if HERMES is used. Unsure why I disabled it a few years ago
- [change] the bespoke TCI command tx_frequency has changed back to the following as per the TCI protocol, tx_frequency:3700000; . There is now a bespoke Thetis message also sent out at the same time, tx_frequency_thetis:3700000,b80m,false,false;
- [fix] mic disable/enable button on front end will now disable the mic at startup if set as off. Note: its state is saved as part of the tx profile
- [fix] fixed rare out of bounds issue in memory ScheduleUpdate
- [fix] cat IF command fix where an error (O;) message would be returned if an unsupported TuneStep was in use. This bug has existed since 25/02/2007
- [fix] mode buttons when in collapsed mode should now work again when Thetis is first launched
- [fix] when running multiple instances of Thetis, closing down others may cause issues with PerformaceCounter/CpuLoad display, resulting in endless error logs. This has been resolved
- [fix] fixed wave record crash if Windows [Controlled folder access] is turned on. You have to add  C:\Users\<you>\Music  to the allowed list if you want to use the wave record when [Controlled folder access] is turned on

## v2.10.3.8 - Change Log
- [fix] maintain delta checkbox now greyed if adjust min to noise floor is unchecked
- [fix] filter view now updates when zzfl etc cat commands are used
- [fix] refactored waterfall colour min/max for filterview. Fixes issues with high AGC offsets
- [fix] rx2 containers will not show if rx2 is disabled and the console window is restored from a minimised state
- [fix] fixed issue with DB manager, wher dbman.json would not be loaded correctly if a radio model was added/removed from the code. Now defaults to HERMES if model not found, ie HL2
- [fix] vac tx gains are min/max validated. To prevent crash/error with the HL2 modified version that is able to assign mic gain to tx vac gain