@@ -14,12 +14,14 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [change] exporting a tx profile will now ask for destination location and filename. It will complain if filename already exists
 - [change] restored step attenuator RX1 if HERMES is used. Unsure why I disabled it a few years ago
 - [change] the bespoke TCI command tx_frequency has changed back to the following as per the TCI protocol, tx_frequency:3700000; . There is now a bespoke Thetis message also sent out at the same time, tx_frequency_thetis:3700000,b80m,false,false;
+- [change] refactor serial port pin change detection code for slight performance improvements
 - [fix] mic disable/enable button on front end will now disable the mic at startup if set as off. Note: its state is saved as part of the tx profile
 - [fix] fixed rare out of bounds issue in memory ScheduleUpdate
 - [fix] cat IF command fix where an error (O;) message would be returned if an unsupported TuneStep was in use. This bug has existed since 25/02/2007
 - [fix] mode buttons when in collapsed mode should now work again when Thetis is first launched
 - [fix] when running multiple instances of Thetis, closing down others may cause issues with PerformaceCounter/CpuLoad display, resulting in endless error logs. This has been resolved
-- [fix] fixed wave record crash if Windows [Controlled folder access] is turned on. You have to add  C:\Users\<you>\Music  to the allowed list if you want to use the wave record when [Controlled folder access] is turned on
+- [fix] fixed wave record crash if Windows [Controlled folder access] is turned on. You have to add  Thetis.exe  to the [Allow an app through Controlled folder access] list if you want to use the wave record when [Controlled folder access] is turned on
+- [fix] the sub-receiver now respects the main receiver’s mute state, fixing an issue where sub-receiver audio could still be heard even when the main receiver was muted
 
 ## v2.10.3.8 - Change Log
 - [fix] maintain delta checkbox now greyed if adjust min to noise floor is unchecked
